Refactored code to make it fit into current quality standards